Bug 197466 - "Back button (session history) has 50 entries regardless of setting in prefs.js" [p=zug_treno@yahoo.com r+sr=bzbarsky a1.9=damons]